# lt-mapper

./: LICENSE  README.md
docker/: Dockerfile  build.sh  run.sh
ltremovert/: CMakeLists.txt
ltremovert/config/: params_ltmapper.yaml
ltremovert/include/removert/: Removerter.h  RosParamServer.h  Session.h  utility.h
ltremovert/launch/: removert_visualization.rviz  run_ltmapper.launch
ltremovert/src/: Removerter.cpp  RosParamServer.cpp  Session.cpp  removert_main.cpp  utility.cpp
ltslam/: CMakeLists.txt  README.md  package.xml
ltslam/config/: params.yaml
ltslam/include/ltslam/: BetweenFactorWithAnchoring.h  KDTreeVectorOfVectorsAdaptor.h  LTslam.h  RosParamServer.h  Scancontext.h  Session.h  utility.h
ltslam/launch/: run.launch
ltslam/src/: LTslam.cpp  RosParamServer.cpp  Scancontext.cpp  Session.cpp  main.cpp  utility.cpp
